# advent-of-code

./: .editorconfig  .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
src/solutions/: boilerplate.rs
src/solutions/2015/: 01.rs
src/solutions/2023/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs
src/utils/: mod.rs  strings.rs  text_colors.rs
src/utils/challenges/: macros.rs  mod.rs  prelude.rs
src/utils/grids/: grid.rs  mod.rs  static_grid.rs
src/utils/math/: mod.rs
