[package]
name = "advent_of_code"
authors = ["Wesley Lether"]
version = "0.1.0"
publish = false
edition = "2021"
default-run = "runner"

[lib]
name = "advent_of_code"
path = "src/lib.rs"

[[bin]]
name = "runner"
path = "src/bin/runner.rs"

[dependencies]
colored = "2"
lazy_static = "1.4"
num = "0.4"
paste = "1.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
dotenv = "0.15"
